--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
 </head>
 <body>
 
-  <!-- Background Particles -->
+  <!-- خلفية متحركة باستخدام particles.js -->
   <div id="particles-js"></div>
 
-  <!-- Sticky Navigation Bar -->
+  <!-- شريط تنقل ثابت (Sticky Navbar) -->
   <nav class="navbar">
     <div class="nav-container">
       <a href="#home" class="brand">شاهين</a>
       <ul class="nav-links">
-        <li><a href="tel:0945251594">اتصل بنا</a></li> <!-- زر الاتصال المباشر -->
-        <li><a href="courses.html">كورسات</a></li> <!-- زر الكورسات -->
+        <li><a href="tel:0945251594">اتصل بنا</a></li>
+        <li><a href="courses.html">كورسات</a></li>
         <li><a href="#about">حول الموقع</a></li>
       </ul>
     </div>
   </nav>
 
-  <!-- Header Section -->
+  <!-- قسم الهيدر -->
   <header id="home">
     <h1>تواصل معي</h1>
-    <p>أنا هنا للرد على استفساراتك! تواصل معي عبر الوسائل التالية أو عبر النموذج.</p>
+    <p>أنا هنا للرد على استفساراتك! تواصل معي عبر الوسائل التالية أو عبر النموذج أدناه.</p>
   </header>
 
-  <!-- Contact Links -->
+  <!-- قسم روابط التواصل -->
   <section class="contact-links">
     <a href="https://t.me/s2a22" target="_blank" class="contact-btn telegram" data-tooltip="تواصل عبر تيليجرام">
       <i class="fab fa-telegram-plane icon"></i> تيليجرام
@@ -41,7 +41,28 @@
     </a>
   </section>
 
-  <!-- Footer -->
+  <!-- قسم تواصل الرسائل (Feedback Section) -->
+  <section class="feedback-section" id="about">
+    <h2>أرسل رسالتك</h2>
+    <form id="feedback-form" action="https://formspree.io/f/xjkgnkdy" method="POST">
+      <div class="input-group">
+        <input type="text" id="user-name" name="name" placeholder="اسمك" required>
+      </div>
+      <div class="input-group">
+        <input type="email" id="user-email" name="email" placeholder="البريد الإلكتروني" required>
+      </div>
+      <div class="input-group">
+        <textarea id="user-message" name="message" placeholder="رسالتك" required></textarea>
+      </div>
+      <button type="submit" class="submit-btn">إرسال</button>
+    </form>
+    <div id="response-message"></div>
+  </section>
+
+  <!-- زر الرجوع للأعلى -->
+  <button id="back-to-top" class="back-to-top">↑</button>
+
+  <!-- التذييل -->
   <footer>
     <p>&copy; 2025 جميع الحقوق محفوظة</p>
   </footer>
