--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- قسم الهيدر -->
   <header id="home">
     <h1>مرحبا بكم في موقع شاهين</h1>
-    <p>موقع احترافي للتواصل مع شاهين، وتعرف على كورسات ومحتوى جديد قريباً.</p>
+    <p>وتعرف على كورسات ومحتوى جديد قريباً.</p>
   </header>
 
   <!-- قسم روابط التواصل الاجتماعي -->
@@ -44,7 +44,7 @@
   <!-- قسم حول الموقع -->
   <section id="about" class="about-section">
     <h2>حول الموقع</h2>
-    <p>هذا الموقع يقدم لك وسيلة تواصل احترافية مع شاهين، بالإضافة إلى عرض كورسات ومحتوى جديد قادم قريباً.</p>
+    <p>موقع يقدم في كورسات مسربة حاليا بسعر يعتبر معقول.</p>
   </section>
 
   <!-- قسم تواصل الرسائل (نموذج) -->
