--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
 
   <!-- شريط تنقل ثابت -->
   <nav class="navbar">
-    <div class="nav-container">
-      <a href="#home" class="brand">شاهين</a>
-      <ul class="nav-links">
-        <li><a href="#home">الرئيسية</a></li>
-        <li><a href="courses.html">كورسات</a></li>
-        <li><a href="#about">حول الموقع</a></li>
-        <li><a href="#contact">تواصل</a></li>
-      </ul>
-    </div>
-  </nav>
+  <div class="nav-container">
+    <a href="#home" class="brand">شاهين</a> <!-- اسم الموقع -->
+    <ul class="nav-links">
+      <li><a href="#home">الرئيسية</a></li>
+      <li><a href="courses.html">كورسات</a></li>
+      <li><a href="#about">حول الموقع</a></li>
+      <li><a href="#contact">تواصل</a></li>
+    </ul>
+  </div>
+</nav>
+
 
   <!-- قسم الهيدر -->
   <header id="home">
