--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>شاهين - تواصل معي</title>
+  <title>شاهين</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -28,7 +28,7 @@
   <!-- قسم الهيدر -->
   <header id="home">
     <h1>مرحبا بكم في موقع شاهين</h1>
-    <p>موقع احترافي للتواصل مع شاهين، وتعرف على كورسات ومحتوى جديد قريباً.</p>
+    <p>تعرف على كورسات ومحتوى جديد قريباً.</p>
   </header>
 
   <!-- قسم روابط التواصل الاجتماعي -->
@@ -56,7 +56,7 @@
   <!-- قسم حول الموقع -->
   <section id="about" class="about-section">
     <h2>حول الموقع</h2>
-    <p>هذا الموقع يقدم لك وسيلة تواصل احترافية مع شاهين، بالإضافة إلى عرض كورسات ومحتوى جديد قادم قريباً.</p>
+    <p>عروض كورسات جديده قادم قريباً.</p>
   </section>
 
   <!-- زر الرجوع للأعلى -->
