--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="#home">الرئيسية</a></li>
         <li><a href="courses.html">كورسات</a></li>
         <li><a href="#about">حول الموقع</a></li>
+        <li><a href="#contact">تواصل</a></li>
       </ul>
     </div>
   </nav>
@@ -41,22 +42,27 @@
     </a>
   </section>
 
-  <!-- قسم الاشتراك في النشرة البريدية -->
-  <section id="newsletter" class="newsletter-section">
-    <h2>اشترك في النشرة البريدية</h2>
-    <form id="newsletter-form">
+  <!-- قسم تواصل الرسائل (نموذج) -->
+  <section id="contact" class="feedback-section">
+    <h2>أرسل رسالتك</h2>
+    <form id="feedback-form" action="https://formspree.io/f/xjkgnkdy" method="POST">
       <div class="input-group">
-        <input type="email" id="newsletter-email" placeholder="أدخل بريدك الإلكتروني" required>
+        <input type="text" id="user-name" name="name" placeholder="اسمك" required>
       </div>
-      <button type="submit" class="submit-btn">اشترك</button>
+      <div class="input-group">
+        <input type="email" id="user-email" name="email" placeholder="البريد الإلكتروني" required>
+      </div>
+      <div class="input-group">
+        <textarea id="user-message" name="message" placeholder="رسالتك" required></textarea>
+      </div>
+      <button type="submit" class="submit-btn">إرسال</button>
     </form>
-    <div id="newsletter-response"></div>
   </section>
 
   <!-- قسم حول الموقع -->
   <section id="about" class="about-section">
     <h2>حول الموقع</h2>
-    <p>عروض كورسات جديده قادم قريباً.</p>
+    <p>هذا الموقع يقدم عروض كورسات ومحتوى جديد قادم قريباً.</p>
   </section>
 
   <!-- زر الرجوع للأعلى -->
