--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
   </header>
 
   <!-- قسم روابط التواصل الاجتماعي -->
-<section class="contact-links">
-  <a href="https://t.me/s2a22" target="_blank" class="contact-btn telegram" data-tooltip="تواصل عبر تيليجرام">
-    <i class="fab fa-telegram-plane icon"></i> تيليجرام
-  </a>
-  <a href="https://www.instagram.com/s2a2222/" target="_blank" class="contact-btn instagram" data-tooltip="تواصل عبر إنستجرام">
-    <i class="fab fa-instagram icon"></i> إنستجرام
-  </a>
-</section>
+  <section class="contact-links">
+    <a href="https://t.me/s2a22" target="_blank" class="contact-btn telegram" data-tooltip="تواصل عبر تيليجرام">
+      <i class="fab fa-telegram-plane icon"></i> تيليجرام
+    </a>
+    <a href="https://www.instagram.com/s2a2222/" target="_blank" class="contact-btn instagram" data-tooltip="تواصل عبر إنستجرام">
+      <i class="fab fa-instagram icon"></i> إنستجرام
+    </a>
+  </section>
 
   <!-- قسم تواصل الرسائل (نموذج) -->
   <section id="contact" class="feedback-section">
     <h2>أرسل رسالتك</h2>
-    <form id="feedback-form" action="https://formspree.io/f/xjkgnkdy" method="POST">
+    <form id="feedback-form" action="https://formspree.io/f/xjkgnkdy" method="POST" onsubmit="handleSubmit(event)">
       <div class="input-group">
         <input type="text" id="user-name" name="name" placeholder="اسمك" required>
       </div>
@@ -57,12 +57,13 @@
       </div>
       <button type="submit" class="submit-btn">إرسال</button>
     </form>
+    <div id="response-message"></div>
   </section>
 
   <!-- قسم حول الموقع -->
   <section id="about" class="about-section">
     <h2>حول الموقع</h2>
-    <p>هذا الموقع يقدم عروض كورسات ومحتوى جديد قادم قريباً.</p>
+    <p>هذا الموقع يقدم لك عروض كورسات ومحتوى جديد قادم قريباً.</p>
   </section>
 
   <!-- زر الرجوع للأعلى -->
