--- a/courses.html
+++ b/courses.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>كورسات - شاهين</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>كورسات - موقع شاهين</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="courses-container">
-    <h1 id="soon-message">كورسات قريباً!</h1>
-    <p class="coming-soon-text">جاري التحضير للإطلاق...</p>
-    <a href="index.html" class="back-btn">العودة إلى الرئيسية</a>
-  </div>
 
-  <script>
-    // تغيير لون العنوان كل ثانية
-    const colors = ["#3498db", "#e74c3c", "#2ecc71", "#f1c40f", "#9b59b6"];
-    setInterval(() => {
-      document.getElementById("soon-message").style.color = 
-        colors[Math.floor(Math.random() * colors.length)];
-    }, 1000);
-  </script>
+    <!-- البار العلوي -->
+    <div class="navbar">
+        <div class="logo">شاهين</div>
+        <div>
+            <a href="index.html">الرئيسية</a>
+            <a href="https://www.instagram.com/s2a2222" target="_blank">إنستا</a>
+            <a href="https://t.me/s2a22" target="_blank">تيلي</a>
+        </div>
+    </div>
+
+    <!-- محتوى الصفحة -->
+    <div class="content">
+        <h1>كورسات</h1>
+        <p>انتظر قريباً المزيد من الكورسات.</p>
+    </div>
+
 </body>
 </html>
