--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="navbar">
         <div class="logo">شاهين</div>
         <div>
-            <a href="#courses">كورسات</a>
+            <a href="courses.html">كورسات</a>
             <a href="https://www.instagram.com/s2a2222" target="_blank">إنستا</a>
             <a href="https://t.me/s2a22" target="_blank">تيلي</a>
         </div>
@@ -27,12 +27,6 @@
             <span class="icon" onclick="changeIconColor(this)">📱</span>
             <span class="icon" onclick="changeIconColor(this)">📚</span>
         </div>
-    </div>
-
-    <!-- قسم الكورسات -->
-    <div id="courses" class="contact-form">
-        <h2>كورسات</h2>
-        <p>انتظر قريباً المزيد من الكورسات.</p>
     </div>
 
     <!-- نموذج التواصل -->
