--- a/courses.html
+++ b/courses.html
@@ -7,22 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <!-- البار العلوي -->
-    <div class="navbar">
+    <nav class="navbar sticky">
         <div class="logo">شاهين</div>
-        <div>
+        <div class="nav-links">
             <a href="index.html">الرئيسية</a>
             <a href="https://www.instagram.com/s2a2222" target="_blank">إنستا</a>
             <a href="https://t.me/s2a22" target="_blank">تيلي</a>
         </div>
-    </div>
+    </nav>
 
-    <!-- محتوى الصفحة -->
-    <div class="content">
+    <!-- محتوى الكورسات -->
+    <div class="courses-content">
         <h1>كورسات</h1>
         <p>انتظر قريباً المزيد من الكورسات.</p>
+        <div class="coming-soon">
+            <div class="loader"></div>
+        </div>
     </div>
 
+    <script src="script.js"></script>
 </body>
 </html>
